# seismic-linter

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: correct_workflow.py  detect_leak_demo.py
src/seismic_linter/: analyzer.py  cli.py  notebook_handler.py  rules.py  runtime.py  version.py
tests/: test_analyzer.py  test_analyzer_direct.py  test_api_notebook.py  test_cli.py  test_config_coverage.py  test_fixes.py  test_runner.py  test_suppression.py  test_version.py
